# ProgrammingAll

./: .gitignore  app.txt  projecting.py  pydantic_notes.py
c++/coding/: classes.cpp  headers.hpp  syntaxes.sh
cpp_notes/: main.cpp
cpp_notes/docs/: clean_syntaxes.sh  plan.md
cpp_notes/include/: classess.hpp  collections.hpp
cpp_notes/src/: classess.cpp  collections.cpp
dev/Docker/: .dockerignore  Docker_information  Dockerfile  index.html  siemano.py
dev/SQL/: config.py  cursor_connection.py  queries_operation.json  todo.txt
docs/: markdown.md
elixir/: knowleadge.ex
elixir/concepts/: manager.ex
elixir/conceptsTests/: order_model_test.exs  simple_math_operation_test.exs  test_helper.exs
elixir/playerGame/: game.ex  game_exceptions.ex  player.ex  player_registry.ex  rock_paper_scissors.ex
gcc/: .gitignore  CMakeLists.txt  app.txt  notes.txt
gcc/cmake_learn/: CMakeLists.txt  Cmake_Learn.sh  config.ini  main.cpp
gcc/cmake_learn/inc/: message.hpp
gcc/cmake_learn/my_libraries/: math_lib.cpp  math_lib.hpp
gcc/cmake_learn/my_resources/: example.json
gcc/coding/: functions.cpp
gcc/coding/static/: jsonData.json
gcc/cpp_notes/: CMakeLists.txt  main.cpp
gcc/cpp_notes/include/: logger.hpp  namespaces.hpp  structures.hpp
gcc/dev/leaderboard/app/: main.cpp
gcc/dev/leaderboard/include/: leaderboard.hpp  parse.hpp
gcc/dev/leaderboard/plan/: task_parser.sh
gcc/dev/leaderboard/src/: leaderboard.cpp  parse.cpp
gcc/dev/playground/app/: main.cpp
gcc/dev/playground/include/: knowledge.hpp
gcc/dev/playground/src/: knowledge.cpp
gcc/dev/tracker/app/: main.cpp  plan.sh
gcc/dev/tracker/include/: tracker.hpp
gcc/dev/tracker/src/: tracker.cpp
gcc/notes/docs/: old_syntaxes.sh  pattern.sh  plan.md
gcc/notes/include/: classess.hpp
gcc/notes/src/: classess.cpp  collections.cpp  namespaces.cpp  structures.cpp
gcc/old/notes/: CMakeLists.txt  main.cpp
gcc/old/notes/docs/: clean_syntaxes.sh  old_syntaxes.sh  pattern.sh  plan.md
gcc/old/notes/include/: classess.hpp  collections.hpp  logger.hpp  namespaces.hpp  structures.hpp
gcc/old/notes/src/: classess.cpp  collections.cpp  namespaces.cpp  structures.cpp
gcc/old/projects/coding/: classes.cpp  files.cpp  functions.cpp  main.cpp
gcc/old/projects/coding/static/: data.txt
gcc/old/projects/notes_maker_cli/: .clang-format  .syntaxes  Makefile
gcc/old/projects/notes_maker_cli/include/: Logger.hpp  NoteManager.hpp
gcc/old/projects/notes_maker_cli/src/: Logger.cpp  NoteManager.cpp  main.cpp  syntaxes.cpp
gcc/old/projects/notes_maker_cli/static/: saved_notes.json  saved_notes.txt
gcc/old/projects/poke_cashe/api/: .gitignore  CMakeLists.txt
gcc/old/projects/poke_cashe/api/include/: database.hpp  handlers.hpp  router.hpp  types.hpp
gcc/old/projects/poke_cashe/api/src/: CMakeLists.txt  database.cpp  handlers.cpp  main.cpp  router.cpp
gcc/old/projects/poke_cashe/api/test/: CMakeLists.txt  poke_test.cpp
gcc/old/projects/poke_cashe/client/cache/: pikachu.json  requests.sh
gcc/old/projects/poke_cashe/client/include/: pokemon.hpp
gcc/old/projects/poke_cashe/client/src/: main.cpp
gcc/old/projects/task_queue/: main.cpp  queue_headers.hpp  task.cpp
gcc/playground/: CMakeLists.txt
gcc/playground/app/: main.cpp
gcc/playground/apps/playground/: main.cpp
gcc/playground/include/: knowledge.hpp  logger.hpp
gcc/playground/include/apps/: leaderboard.hpp
gcc/playground/include/apps/board_app/: leaderboard.hpp  parse.hpp
gcc/playground/include/apps/rpg_app/: base_character.hpp  characters.hpp
gcc/playground/include/docs/: knowledge.hpp  task.sh  task_oop_rpg.sh
gcc/playground/include/utils/: parse.hpp  variables.hpp
gcc/playground/modules/apps/: leaderboard.cpp
gcc/playground/modules/apps/board_app/: leaderboard.cpp  parse.cpp
gcc/playground/modules/apps/rpg_app/: base_character.cpp  characters.cpp
gcc/playground/modules/docs/: knowledge.cpp
gcc/playground/modules/utils/: logger.cpp  parse.cpp
gcc/playground/resources/: scores.txt
gcc/playground/src/: knowledge.cpp  main.cpp
gcc/playground/tests/: test_explanation.cpp  test_library.cpp  test_main.cpp  test_rpg_app.cpp
gcc/projects/BoardGameRental/: procedures.sql  triggers.sql
gcc/projects/NotesMakerCLI/: .syntaxes  Makefile
gcc/projects/NotesMakerCLI/include/: NoteManager.hpp
gcc/projects/NotesMakerCLI/src/: Logger.cpp  syntaxes.cpp
gcc/projects/PokeCashe/api/: CMakeLists.txt
gcc/projects/PokeCashe/api/include/: database.hpp  router.hpp
gcc/projects/PokeCashe/api/src/: handlers.cpp  main.cpp
gcc/projects/PokeCashe/client/src/: main.cpp
gcc/projects/TaskQueueProject/: task.cpp
gcc/projects/coding/: classes.cpp  files.cpp  headers.hpp  main.cpp
gcc/projects/coding/static/: data.txt
gcc/projects/notes_maker_cli/: .clang-format
gcc/projects/notes_maker_cli/include/: Logger.hpp
gcc/projects/notes_maker_cli/src/: NoteManager.cpp  main.cpp
gcc/projects/notes_maker_cli/static/: saved_notes.json  saved_notes.txt
gcc/projects/poke_cashe/api/include/: types.hpp
gcc/projects/poke_cashe/api/src/: CMakeLists.txt  database.cpp  router.cpp
gcc/projects/poke_cashe/api/test/: CMakeLists.txt  poke_test.cpp
gcc/projects/poke_cashe/client/include/: pokemon.hpp
gcc/projects/task_queue/: main.cpp  queue_headers.hpp
gcc/tests/: test_explanation.cpp  test_library.cpp  test_main.cpp
gcc/utils/include/: logger.hpp  variables.hpp
gcc/utils/src/: logger.cpp
groovy/: knowleadge.groovy
groovy/groovy_iht_e2e_ci/: pom.xml
java/: pom.xml
linux/: bash_know.sh  bashrc.sh  docker_know.sh  git_know.sh  linux_info.sh
linux/knowleadge/: bash_know.sh  bashrc.sh  docker_know.sh  (+3 more)
neovim/: events.lua  lazy-lock.json
python/: debug_launch.json  logger.py  package_debug.py  pandas_usage.sh  parsing_usage.py  projecting.py  regex_usage.py  subprocess_usae.py  test_analisis.py  writing_test_per_function.py
static/: simple.ini  simple.json  simple.xml  simple.yaml
telecom/: telecom_know.sh  telecomunicationKnow.sh
tests/: Algorithms.py  Collections.py  Functions_lambda.py  Selenium.py  sql_revise.sql
(+261 files in other folders)
